--- a/Progect/modules/jenkins/values.yaml
+++ b/Progect/modules/jenkins/values.yaml
@@ -1,55 +1,95 @@
 controller:
   admin:
     createSecret: true
-    username: "admin"
-    password: "changeme123"  # для продакшн винеси у секрет/var
+    username: "${admin_username}"
+    {{- if admin_password }}
+    password: "${admin_password}"
+    {{- end }}
 
-  serviceType: ClusterIP
+  serviceType: "${service_type}"
+  servicePort: ${service_port}
+  service:
+    port: ${service_port}
+    targetPort: 8080
+
+  resources:
+    requests:
+      cpu: "250m"
+      memory: "512Mi"
+    limits:
+      cpu: "500m"
+      memory: "1Gi"
 
   persistence:
-    enabled: true
-    # existingClaim: jenkins  # ← вилучено, щоб Helm сам створив PVC
-    storageClass: gp3
-    size: 8Gi
+    enabled: ${persistence_enabled}
+    storageClass: "${storage_class}"
+    size: "${storage_size}"
 
-  # Вмикаємо JCasC і задаємо креденшели + podTemplate для Kaniko
+  # Використовуємо наш ServiceAccount (з IRSA)
+  rbac:
+    create: true
+  serviceAccount:
+    create: false
+    name: "${sa_name}"
+
+  # JCasC: креденшели (опц.), seed-job (опц.) і podTemplate з Kaniko
   JCasC:
     enabled: true
     configScripts:
-      credentials-and-agents: |
-        jenkins:
-          credentials:
-            system:
-              domainCredentials:
-                - credentials:
-                    - string:
-                        id: "AWS_REGION"
-                        description: "AWS region for ECR"
-                        secret: "${AWS_REGION:-eu-central-1}"
-                    - string:
-                        id: "ECR_URI"
-                        description: "ECR repository URI"
-                        secret: "${ECR_URI:-000000000000.dkr.ecr.eu-central-1.amazonaws.com/django-app}"
-                    - basicSSHUserPrivateKey:
-                        id: "gitops-ssh"
-                        description: "SSH key for GitOps repo"
-                        username: "git"
-                        privateKeySource:
-                          directEntry:
-                            privateKey: "${GITOPS_SSH_PRIVATE_KEY:-}"
-          nodes:
-            - permanent:
-                labelString: "default"
-                name: "k8s-agent"
-                numExecutors: 1
-                remoteFS: "/home/jenkins/agent"
-                retentionStrategy: "always"
-        tool:
-          git:
-            installations:
-              - name: "Default"
-                home: "git"
-
+      credentials:
+        {{- if and github_username github_token }}
+        credentials:
+          system:
+            domainCredentials:
+              - credentials:
+                  - usernamePassword:
+                      scope: GLOBAL
+                      id: github-token
+                      username: "${github_username}"
+                      password: "${github_token}"
+                      description: "GitHub PAT for seed job"
+        {{- end }}
+      seed-job:
+        {{- if github_repo_url }}
+        jobs:
+          - script: >
+              job('seed-job') {
+                description('Seed job to generate pipelines')
+                scm {
+                  git {
+                    remote {
+                      url('${github_repo_url}')
+                      {{- if and github_username github_token }}
+                      credentials('github-token')
+                      {{- end }}
+                    }
+                    branches('*/main')
+                  }
+                }
+                steps {
+                  dsl {
+                    text('''pipelineJob("goit-docker-django") {
+                      definition {
+                        cpsScm {
+                          scriptPath("Jenkinsfile")
+                          scm {
+                            git {
+                              remote {
+                                url("${github_repo_url}")
+                                {{- if and github_username github_token }}
+                                credentials("github-token")
+                                {{- end }}
+                              }
+                              branches("*/main")
+                            }
+                          }
+                        }
+                      }
+                    }''')
+                  }
+                }
+              }
+        {{- end }}
       pod-template: |
         jenkins:
           clouds:
@@ -61,55 +101,16 @@ controller:
                 templates:
                   - name: "default"
                     label: "default"
-                    serviceAccount: "{{ .Values.rbac.serviceAccountName | default (include "jenkins.serviceAccountName" .) }}"
+                    serviceAccount: "${sa_name}"
                     containers:
                       - name: "kaniko"
-                        image: "gcr.io/kaniko-project/executor:latest"
-                        command:
-                          - "cat"
+                        image: "${kaniko_image}"
+                        command: [ "cat" ]
                         ttyEnabled: true
                         volumeMounts:
                           - name: kaniko-cache
                             mountPath: /kaniko/.cache
                         env:
-                          - name: AWS_REGION
-                            valueFrom:
-                              secretKeyRef:
-                                name: jenkins-aws
-                                key: AWS_REGION
-                          - name: AWS_ACCESS_KEY_ID
-                            valueFrom:
-                              secretKeyRef:
-                                name: jenkins-aws
-                                key: AWS_ACCESS_KEY_ID
-                          - name: AWS_SECRET_ACCESS_KEY
-                            valueFrom:
-                              secretKeyRef:
-                                name: jenkins-aws
-                                key: AWS_SECRET_ACCESS_KEY
-                      - name: "git"
-                        image: "alpine/git:latest"
-                        command: ["cat"]
-                        ttyEnabled: true
-                    volumes:
-                      - name: kaniko-cache
-                        emptyDir: {}
-
-  installPlugins:
-    - kubernetes:4267.v6be2eb2f5d2a
-    - workflow-aggregator:596.v8c21c963d92d
-    - credentials:1319.v7eb_51b_3a_c97b_
-    - configuration-as-code:1775.v810dc950b_514
-    - git:5.6.0
-    - ssh-credentials:332.va_1f15c56da_1c
-    - matrix-auth:3.2.2
-    - workflow-job:1385.vb_58b_86ea_fff1
-    - timestamper:1.27
-    - ansiColor:1.0.4
-    - pipeline-stage-view:2.34
-
-rbac:
-  create: true
-
-serviceAccount:
-  create: true
+                          # Для ECR із IRSA достатньо мати роль; REGION можна передати явним ENV за потреби
+                          {{- if ecr_repo_uri }}
+                          - name: ECR_URI
