--- a/Progect/charts/django-app/templates/deployment.yaml
+++ b/Progect/charts/django-app/templates/deployment.yaml
@@ -22,7 +22,7 @@ spec:
         - name: migrate
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           workingDir: /app/django_app
-          command: ["sh","-lc","python manage.py migrate --noinput"]
+          command: ["sh","-lc","python core/manage.py migrate --noinput"]
           envFrom:
             - configMapRef:
                 name: {{ include "django-app.fullname" . }}-config
@@ -39,7 +39,7 @@ spec:
           workingDir: /app/django_app
           ports:
             - containerPort: 8000
-          command: ["python","manage.py","runserver","0.0.0.0:8000"]
+          command: ["python","core/manage.py","runserver","0.0.0.0:8000"]
           envFrom:
             - configMapRef:
                 name: {{ include "django-app.fullname" . }}-config
@@ -56,12 +56,12 @@ spec:
             initialDelaySeconds: {{ .Values.health.readinessInitialDelay | default 5 }}
             periodSeconds: {{ .Values.health.readinessPeriod | default 5 }}
 
-            livenessProbe:
-              httpGet:
-                path: {{ .Values.health.path | default "/admin/login/" }}
-                port: 8000
-              initialDelaySeconds: {{ .Values.health.livenessInitialDelay | default 20 }}
-              periodSeconds: {{ .Values.health.livenessPeriod | default 10 }}
+          livenessProbe:
+            httpGet:
+              path: {{ .Values.health.path | default "/admin/login/" }}
+              port: 8000
+            initialDelaySeconds: {{ .Values.health.livenessInitialDelay | default 20 }}
+            periodSeconds: {{ .Values.health.livenessPeriod | default 10 }}
           resources:
             {{- toYaml (.Values.resources | default dict) | nindent 12 }}
 
