--- a/lesson-7/charts/django-app/values.yaml
+++ b/lesson-7/charts/django-app/values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: 785434010839.dkr.ecr.us-east-1.amazonaws.com/lesson-7-ecr
-  tag: "latest"
+  tag: "v1-mini"
 
 replicaCount: 2
 
