--- a/Progect/charts/django-app/templates/configmap.yaml
+++ b/Progect/charts/django-app/templates/configmap.yaml
@@ -1,16 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "django-app.fullname" . }}-config
+  name: {{ .Release.Name }}-django-app-config
   labels:
-    {{- include "django-app.labels" . | nindent 4 }}
+    app: django-app
+    release: {{ .Release.Name }}
 data:
-  DJANGO_ALLOWED_HOSTS: "*"
-
-  # DB envs для settings.py
-  DB_ENGINE: "postgresql"
-  DB_NAME: "appdb"
-  DB_USER: "appuser"
-  DB_PASSWORD: "appsecret"
-  DB_HOST: "db"
-  DB_PORT: "5432"
+{{- range $k, $v := .Values.env }}
+  {{ $k }}: "{{ $v }}"
+{{- end }}
