--- a/Progect/Jenkinsfile
+++ b/Progect/Jenkinsfile
@@ -1,8 +1,25 @@
 pipeline {
   agent {
     kubernetes {
-      label 'kaniko'
+      // якщо у тебе вже є podTemplate "kaniko" у Jenkins — можна залишити цю стрічку;
+      // якщо ні — все одно спрацює, бо нижче ми явно додаємо containerTemplate.
       inheritFrom 'kaniko'
+
+      // явне визначення контейнера Kaniko (без YAML)
+      containerTemplate {
+        name 'kaniko'
+        image 'gcr.io/kaniko-project/executor:latest'
+        command 'cat'
+        ttyEnabled true
+        // кеш каніко
+        volumeMounts([volumeMount(name: 'kaniko-cache', mountPath: '/kaniko/.cache')])
+      }
+      volumes {
+        emptyDirVolume(mountPath: '/kaniko/.cache', memory: false, name: 'kaniko-cache')
+      }
+      // за замовчуванням jnlp як робочий контейнер
+      defaultContainer 'jnlp'
+      serviceAccount 'jenkins'
     }
   }
 
@@ -18,69 +35,62 @@ pipeline {
   stages {
     stage('Checkout') {
       steps {
-        timestamps {
-          ansiColor('xterm') {
-            checkout scm
-            sh 'git status'
-          }
-        }
+        checkout scm
+        sh 'git rev-parse --short HEAD && git status'
       }
     }
 
     stage('Build & Push (Kaniko)') {
       steps {
-        timestamps {
-          ansiColor('xterm') {
-            container('kaniko') {
-              sh '''
-                set -euxo pipefail
-                TAG="build-${BUILD_NUMBER}"
-                /kaniko/executor \
-                  --context="$WORKSPACE" \
-                  --dockerfile=Dockerfile \
-                  --destination="${ECR_URI}:${TAG}" \
-                  --destination="${ECR_URI}:latest" \
-                  --cache=true --snapshotMode=redo
-                echo "${TAG}" > .image_tag
-              '''
-            }
-          }
+        container('kaniko') {
+          sh '''
+            set -euxo pipefail
+            TAG="build-${BUILD_NUMBER}"
+            /kaniko/executor \
+              --context="$WORKSPACE" \
+              --dockerfile=Dockerfile \
+              --destination="${ECR_URI}:${TAG}" \
+              --destination="${ECR_URI}:latest" \
+              --cache=true --snapshotMode=redo
+            echo "${TAG}" > .image_tag
+          '''
         }
       }
     }
 
     stage('Bump Helm values & Push') {
       steps {
-        timestamps {
-          ansiColor('xterm') {
-            sshagent (credentials: ['gitops-ssh']) {
-              sh '''
-                set -euxo pipefail
-                TAG="$(cat .image_tag)"
-                git remote set-url origin "${GIT_SSH_URL}"
-                git fetch origin "${GITOPS_BRANCH}"
-                git checkout "${GITOPS_BRANCH}"
-                if command -v yq >/dev/null 2>&1; then
-                  yq -i '.image.tag = env(TAG)' "${VALUES_FILE}"
-                else
-                  sed -i.bak -E "s#^(\\s*tag:\\s*).*#\\1${TAG}#g" "${VALUES_FILE}"
-                  rm -f "${VALUES_FILE}.bak"
-                fi
-                git config user.email "ci@local"
-                git config user.name  "jenkins-ci"
-                git add "${VALUES_FILE}" || true
-                git commit -m "ci: bump ${APP_NAME} image tag to ${TAG} [skip ci]" || echo "No changes to commit"
-                git push origin "${GITOPS_BRANCH}"
-              '''
-            }
-          }
+        sshagent (credentials: ['gitops-ssh']) {
+          sh '''
+            set -euxo pipefail
+            TAG="$(cat .image_tag)"
+
+            # на пуш міняємо URL на SSH
+            git remote set-url origin "${GIT_SSH_URL}"
+
+            git fetch origin "${GITOPS_BRANCH}"
+            git checkout "${GITOPS_BRANCH}"
+
+            if command -v yq >/dev/null 2>&1; then
+              yq -i '.image.tag = env(TAG)' "${VALUES_FILE}"
+            else
+              sed -i.bak -E "s#^(\\s*tag:\\s*).*#\\1${TAG}#g" "${VALUES_FILE}"
+              rm -f "${VALUES_FILE}.bak"
+            fi
+
+            git config user.email "ci@local"
+            git config user.name  "jenkins-ci"
+            git add "${VALUES_FILE}" || true
+            git commit -m "ci: bump ${APP_NAME} image tag to ${TAG} [skip ci]" || echo "No changes to commit"
+            git push origin "${GITOPS_BRANCH}"
+          '''
         }
       }
     }
   }
 
   post {
-    success { echo '✅ Пуш у ECR і bump values.yaml — ок. Argo CD підхопить зміни.' }
-    failure { echo '❌ Перевір логи стадії, де впало.' }
+    success { echo '✅ Образ у ECR, values.yaml оновлено — Argo CD підхопить зміни.' }
+    failure { echo '❌ Пайплайн впав — глянь лог стадії вище.' }
   }
 }
